--- a/desarrollo_social/views/nomina_becados.xml
+++ b/desarrollo_social/views/nomina_becados.xml
@@ -43,13 +43,11 @@
 					</header>
 					<group col="4" colspan="4">
 						<group>
-<!--
-							<field name="id" nolabel="0" colspan="2" invisible="0">
--->
 							<field name="anyo" nolabel="0" colspan="2"/>
+							<field name="mes" nolabel="0" colspan="2"/>
 						</group>
 						<group>
-							<field name="mes" nolabel="0" colspan="2"/>
+							<field name="tipo_nomina" nolabel="0" colspan="2"/>
 						</group>
 					</group>
 <!--
@@ -79,7 +77,7 @@
 								</page>
 								<page string="Archivos generados">
 									<field name="archivos" nolabel="1">
-										<tree string="Archivos Generados" editable="bottom">
+										<tree string="Archivos Generados" editable="bottom" domain="[('grado_instruc','=', grado_instruccion)]">
 											<field name="name"/>
 											<field name="datas"/>
 											<field name="user_id"/>
@@ -103,10 +101,10 @@
 				<tree string="Lista de Nómina de Becados">
 					<field name="anyo"/>
 					<field name="mes"/>
+					<field name="tipo_nomina"/>
 					<field name="stage_id"/>
 <!--
 					<field name="tipo_beca"/>
-					<field name="tipo_nomina"/>
 					<field name="status"/>
 					<field name="ejes"/>
 					<field name="sedes"/>
