--- a/recursos_humanos/views/empleado.xml
+++ b/recursos_humanos/views/empleado.xml
@@ -59,11 +59,15 @@
 
 					<field name="place_of_birth" invisible="1"/>
 				</xpath>
-				
-
+					
+				<xpath expr="//label[@class='oe_edit_only']" position="replace">
+					<label for="name" class="oe_edit_only" invisible="1"/>
+				</xpath>
+	
 				<xpath expr="//field[@name='name']" position="replace">
-
-
+					
+					<field name="name" invisible="1"/>
+<!--
 					<table border="0" width="600">
 						<tr>
 							<td>
@@ -75,79 +79,64 @@
 							</td>
 						</tr>
 					</table>
+-->
 
 					
 				</xpath>
 
 				<xpath expr="//field[@name='passport_id']" position="replace">
-
 					<field name="passport_id" attrs="{'invisible': [('categoria', '!=', '2','') ] }"/>
 				</xpath>
+				
 				<xpath expr="//field[@name='ano_antiguedad']" position="replace">
-
 					<field name="ano_antiguedad" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
 				</xpath>
 
 				<xpath expr="//field[@name='country_id']" position="replace">
-
 					<field name="country_id" invisible="1" />
 				</xpath>
 
 				<xpath expr="//field[@name='estado']" position="before">
-
 					<field name="country_id"/>
 				</xpath>
 
 				<xpath expr="//field[@name='empleado']" position="replace">
-
 					<field name="empleado" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
 				</xpath>
 
 				<xpath expr="//field[@name='cedula']" position="before">
-
 					<field name="rif" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
 				</xpath>
 
 				<xpath expr="//field[@name='tipo_nomina']" position="after">
-
 					<field name="class_personal" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
 				</xpath>
 
 				<xpath expr="//field[@name='tiempo_servicio']" position="replace">
-
 					<field name="tiempo_servicio" class="fecha" readonly="0"/>
 				</xpath>
 
 				<xpath expr="//field[@name='birthday']" position="replace">
-
 					<field name="fecha_nacimiento" on_change="data_employee(fecha_nacimiento,'1')"/>
 				</xpath>
 
 				<xpath expr="//group/group/field[@name='edad']" position="replace">
-
 					<field name="edad" style="width:25%%"/>
 				</xpath>
 
 				<xpath expr="//group/group/field[@name='status']" position="replace">
-
 					<field name="status"/>
-				</xpath>
-
-				<xpath expr="//group/group/field[@name='desc_status']" position="replace">
-
-					<field name="desc_status"/>
-
 				</xpath>
 				
 				<xpath expr="//field[@name='job_id']" position="replace">
-
 					<field name="job_id" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
 				</xpath>
 
+<!--
 				<xpath expr="//field[@name='desc_status']" position="replace">
-
 					<field name="desc_status" attrs="{'invisible': [('categoria', '!=', '1') ] }"/>
 				</xpath>
+-->
 
 				<!-- GRUPO DE BOTONES DE ACCIÓN -->
 				<xpath expr="//div[@name='button_box']" position="replace">
@@ -160,7 +149,9 @@
 				</xpath>
 				<xpath expr="//field[@name='empleado']" position="before">
 
+<!--
 					<field name="gerente" attrs="{'invisible': [('categoria', '!=', '2') ] }"/>
+-->
 				</xpath>
 
 				<xpath expr="//group/group[@string='Active']" position="replace">
