--- a/desarrollo_social/views/banco.xml
+++ b/desarrollo_social/views/banco.xml
@@ -3,7 +3,7 @@
 	
 	<data>
 			
-		<!--Accionador para el menu de Departamentos-->
+		<!--Accionador para el menu de entidades bancarias-->
 		<record model="ir.actions.act_window" id="accion_lista_bancos">
 			<field name="name">Bancos</field>
 			<field name="res_model">becados.bancos</field>
@@ -13,7 +13,7 @@
 				<p class="oe_view_nocontent_create">Registrar Banco</p>
 			</field>
 		</record>
-		<!--Accionador para el menu de Departamentos-->
+		<!--Accionador para el menu de entidades bancarias-->
 		
 		<record model="ir.ui.view" id="vista_formulario_bancos">
 			<field name="name">bancos.form</field>
@@ -23,6 +23,7 @@
 					<group colspan="2" col="4">
 						<field name="codigo" nolabel="0" colspan="2"/>
 						<field name="banco" nolabel="0" colspan="2"/>
+						<field name="descripcion" nolabel="0" colspan="2"/>
 					</group>
 				</form>
 			</field>
