--- a/desarrollo_social/views/sedes.xml
+++ b/desarrollo_social/views/sedes.xml
@@ -21,8 +21,10 @@
 			<field name="arch" type="xml"> 
 				<form string="Formulario de Sedes">
 					<group colspan="2">
+						<field name="codigo" nolabel="0" colspan="1"/>
 						<field name="eje" nolabel="0" colspan="1"/>
 						<field name="sede" nolabel="0" colspan="1"/>
+						<field name="descripcion" nolabel="0" colspan="1"/>
 					</group>
 				</form>
 			</field>
@@ -33,8 +35,10 @@
 			<field name="model">becados.sedes</field>
 			<field name="arch" type="xml">
 				<tree string="Lista de Sedes">
+					<field name="codigo"/>
 					<field name="eje"/>
 					<field name="sede"/>
+					<field name="descripcion"/>
 				</tree>
 			</field>
 		</record>
